--- a/Forest-Plot.html
+++ b/Forest-Plot.html
@@ -267,6 +267,7 @@ forestplot(tabletext,
            cochrane_from_rmeta$lower,
            cochrane_from_rmeta$upper,
            hrzl_lines = gpar(col = &quot;#444444&quot;),
+           graphwidth = &quot;auto&quot;,
            new_page = TRUE,
            is.summary = c(TRUE,rep(FALSE,15)),
            clip = c(0.5,15), 
